--- a/DEVINE_NMBR/css/styles.css
+++ b/DEVINE_NMBR/css/styles.css
@@ -1,3 +1,60 @@
+body {
+  background: linear-gradient(to top, rgb(242, 202, 202), rgb(246, 218, 218));
+  background-repeat: repeat;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+}
+body main {
+  display: flex;
+  justify-content: center;
+}
+body main .all {
+  margin: 5rem;
+  padding: 2rem;
+  border: 2px solid rgb(237, 143, 143);
+  border-radius: 30px;
+  background: linear-gradient(to bottom, rgb(237, 143, 143), rgb(238, 103, 103));
+}
+body main .all .h1 {
+  justify-content: center;
+  display: flex;
+  color: white;
+}
 
+.container .content .p-intructions {
+  width: 30rem;
+}
+.container .content p {
+  font-size: 16px;
+  text-align: center;
+}
+.container .content p strong {
+  font-size: 18px;
+}
+.container .content form {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 10px;
+}
+.container .content form input {
+  height: 4rem;
+  width: 30rem;
+  border-radius: 20px;
+  border: none;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
+}
+.container .content form input::placeholder {
+  padding-left: 2rem;
+}
+.container .content form a {
+  justify-content: center;
+  text-decoration: none;
+  text-align: center;
+}
+.container .content .text-resultat {
+  font-size: 35px;
+  color: white;
+}
 
 /*# sourceMappingURL=styles.css.map */
