--- a/DEVINE_NMBR/scss/styles.scss
+++ b/DEVINE_NMBR/scss/styles.scss
@@ -37,14 +37,14 @@ body {
                 font-size: 18px;
             }
         }
-        form {
+        div {
             display: flex;
             flex-direction: column;
             margin: 5px 10px;
 
             input {
                 height: 4rem;
-                width: 30rem;
+                width: 50vmax;
                 border-radius: 20px;
                 border: none;
                 padding: 0 1rem;
@@ -54,14 +54,9 @@ body {
                 padding-left: 2rem;
             }
 
-            a {
-                justify-content: center;
-                text-decoration: none;
-                text-align: center;
-            }
         }
         .text-resultat {
-            font-size: 35px;
+            font-size: 25px;
             color: white ;
 
         }
@@ -69,3 +64,18 @@ body {
     }
 
 };
+
+#jouer {
+    padding: 10px 21px;
+    background-color: #471882;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    &:hover {
+        background-color: #63053b;
+        font-size: 25px;
+    }
+}
+
